Initial project setup and form implementation
Initial Setup: Installed necessary packages for form management and UI components.
Lead Form Implementation: Added JSON Forms for lead intake, including schema and UI schema setup.
Header Layout: Designed header with Tailwind CSS to match provided mockup, including background image and logo positioning.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,13 +13,18 @@
     "isolatedModules": true,
     "jsx": "preserve",
     "incremental": true,
+    "baseUrl": "src",
     "plugins": [
       {
         "name": "next"
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./*"],
+      "types/*": ["types/*"],
+      "@schemas/*": ["schemas/*"],
+      "@api/*": ["app/api/*"],
+      "@leads/*": ["app/leads/*"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
