--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@jsonforms/react": "^3.4.1",
     "next": "15.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "@types/node": "^20",
